# bed2myra

./: README.md  pyproject.toml
bed2myra/: main.py
tests/: PlateSpecs.xlsx  test_min_volume.py  test_replicates.py  test_volume_transfer.py  test_well_mapping.py
