[project]
name = "bed2myra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ChrisKent", email = "chrisgkent@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "primalbedtools>=1.0.0",
]

[project.scripts]
bed2myra = "bed2myra.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
